# UniHack

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION.md  LICENSE  README.md  build.py  jump.py  requirements.txt
my_env/: pyvenv.cfg
my_env/Scripts/: activate  activate.bat
project/: .gitignore  HTTPServerSetup.gd  MonkeyRun.gdextension  icon.svg.import  project.godot  pybridge.gd
project/assets/background/: ground.png.import  plx-1.png.import  plx-2.png.import  plx-3.png.import  plx-4.png.import  plx-5.png.import
project/assets/crocodile/: CrocodileClosed.png.import  CrocodileClosed.png:Zone.Identifier  CrocodileOpen.png.import  CrocodileOpen.png:Zone.Identifier  Water.png.import  Water.png:Zone.Identifier
project/assets/eagle/: Eagle.png.import  Eagle.png:Zone.Identifier
project/assets/monkey/: Monkey_Duck.png.import  Monkey_Duck.png:Zone.Identifier  Monkey_Jump.png.import  Monkey_Jump.png:Zone.Identifier  Monkey_Swing.png.import  Monkey_Swing.png:Zone.Identifier  Monkey_walk.png.import  Monkey_walk.png:Zone.Identifier
project/assets/spikes/: Spike1.png.import  Spike1.png:Zone.Identifier  Spike2.png.import  Spike2.png:Zone.Identifier  Spike3.png.import  Spike3.png:Zone.Identifier
project/assets/vine/: vine.png.import
project/scenes/: Mai8F35.tmp  MaiF24C.tmp  Main.gd  Main.tscn  MyExampleRouter.gd  background.tscn  bird.tscn  crocodile.tscn  game_over.tscn  ground.tscn  monkey.gd  monkey.tscn  pybridge.tscn  scoredisplay.tscn  server_test.tscn  spikes.tscn  spikes_long.tscn  swing.tscn  vine.gd  vine.tscn
src/: CMakeLists.txt  GDExtension.hpp  README.md  camera.py  gui.py  jump.py  main.cpp  main.py
